[package]
name = "pyon"
version = "0.1.0"
edition = "2021"
authors = [ "Hana Kretzer <hanakretzer@gmail.com>", "PixelSergey <sergey.ichtchenko@gmail.com>"]
license = "MIT"
description = "Print ASCII and braille bunnies to your terminal"
readme = "README.md"
keywords = ["cli", "terminal", "utility", "text", "game"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clap-num = "1.1.1"
glob = "0.3.1"
include_dir = { version = "0.7.4", features = ["glob"] }
rand = "0.8.5"
